style: correct footer placement #40 and content  behind header on moviepage #63

--- a/frontend/src/styles/MovieCarousel.css
+++ b/frontend/src/styles/MovieCarousel.css
@@ -3,7 +3,7 @@
     flex-direction: column; /* Stack label and carousel vertically */
     align-items: center;
     gap: 10px;
-    margin-top: 20px;
+    margin-top: 0px;
     background-color: #8b8b8b33;
     padding: 20px;
     padding-bottom: 30px;
